# discjockey

./: .gitignore  TODO  dj.py  djident.py  djrip.py  pyproject.toml  requirements.txt  setup.py
discjockey/: beautify.py  catalog.py  config.py  decamp.py  dj.py  djconfig.py  djfit.py  djident.py  djplatform.py  djrip.py  fit.py  ident.py  largo.py  platform.py  pmset.py  register.py  rip.py  sleepless.py  transcode.py
py/: dj.py  djbeautify.py  djconfig.py  djfit.py  djident.py  djplatform.py  djrip.py  pmset.py  sleepless.py
scripts/: vtunes  wrip
