[tool.poetry]
name = "discjockey"
version = "0.1.0"
description = ""
authors = ["John Leen <jleen@saturnvalley.org>"]

[tool.poetry.dependencies]
python = "^3.11"
discid = "1.2.0"
musicbrainzngs = "0.7.1"

[tool.poetry.scripts]
cosmetize = 'discjockey.beautify:cosmetize'
decamp = 'discjockey.decamp:decamp'
dj = 'discjockey.transcode:transcode'
fident = 'discjockey.ident:ident'
fit = 'discjockey.fit:fit'
frename = 'discjockey.rip:rename'
frip = 'discjockey.rip:rip'
largo = 'discjockey.largo:largo'
sleepless = 'discjockey.sleepless:sleepless'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
