[project]
name = "discjockey"
version = "0.1.0"
description = ""
authors = [
    { name = "John Leen", email = "jleen@saturnvalley.org" }
]
requires-python = ">=3.9"
dependencies = [
    "discid ==1.2.0",
    "musicbrainzngs ==0.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cosmetize = 'discjockey.beautify:cosmetize'
decamp = 'discjockey.decamp:decamp'
dj = 'discjockey.transcode:transcode'
fident = 'discjockey.ident:ident'
fit = 'discjockey.fit:fit'
frename = 'discjockey.rip:rename'
frip = 'discjockey.rip:rip'
largo = 'discjockey.largo:largo'
sleepless = 'discjockey.sleepless:sleepless'

# [tool.uv]
# default-groups = []
